css/style.css
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@300;400;600;700&display=swap");
body {
  font-family: "Open Sans", sans-serif;
  color: #0c0c0c;
  background-color: #ffffff;
  overflow-x: hidden;
}

.layout_padding {
  padding: 90px 0;
}

.layout_padding2 {
  padding: 75px 0;
}

.layout_padding2-top {
  padding-top: 75px;
}

.layout_padding2-bottom {
  padding-bottom: 75px;
}

.layout_padding-top {
  padding-top: 90px;
}

.layout_padding-bottom {
  padding-bottom: 90px;
}

.heading_container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.heading_container h2 {
  position: relative;
  font-weight: bold;
  margin-bottom: 0;
}
.heading_container h2 span {
  color: #00bbf0;
}
.heading_container p {
  margin-top: 10px;
  margin-bottom: 0;
}
.heading_container.heading_center {
  align-items: center;
  text-align: center;
}

a,
a:hover,
a:focus {
  text-decoration: none;
}

a:hover,
a:focus {
  color: initial;
}

.btn,
.btn:focus {
  outline: none !important;
  box-shadow: none;
}

.bg_img_box {
  background-size: cover; /* or contain, depending on your needs */
  background-position: center center;
}

/*header section*/
 /* Set the width and height of the image by a percentage */
 .scaled-image {
  width: 50%; /* Set the desired width as a percentage */
  height: auto; /* Auto-adjust the height to maintain aspect ratio */
}

.hero_area {
  position: relative;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}
.hero_area .hero_bg_box {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  overflow: hidden;
  z-index: -1;
}
.hero_area .hero_bg_box .bg_img_box {
  min-width: 100%;
  min-height: 100%;
}
.hero_area .hero_bg_box img {
  min-width: 100%;
  min-height: 100%;
}

.sub_page .hero_area {
  min-height: auto;
  background: linear-gradient(130deg, #231a6f, #0f054c);
}
.sub_page .hero_area .hero_bg_box {
  display: none;
}

.header_section .container-fluid {
  padding-right: 25px;
  padding-left: 25px;
}

.navbar-brand {
  display: flex;
  align-items: center; /* Align items vertically at the center */
}

.navbar-brand span {
  font-weight: bold;
  font-size: 24px;
  color: #ffffff;
}

.custom_nav-container .navbar-nav {
  margin-left: auto;
}
.custom_nav-container .navbar-nav .nav-item .nav-link {
  padding: 5px 20px;
  color: #ffffff;
  text-align: center;
  text-transform: uppercase;
  border-radius: 5px;
  transition: all 0.3s;
}
.custom_nav-container .navbar-nav .nav-item:hover .nav-link, .custom_nav-container .navbar-nav .nav-item.active .nav-link {
  color: #00bbf0;
}
.custom_nav-container .navbar-nav .nav-item.active .nav-link {
  font-weight: 600;
}

.custom_nav-container .nav_search-btn {
  width: 35px;
  height: 35px;
  padding: 0;
  border: none;
  color: #ffffff;
}
.custom_nav-container .nav_search-btn:hover {
  color: #00bbf0;
}

.custom_nav-container .navbar-toggler {
  outline: none;
}

.custom_nav-container .navbar-toggler {
  padding: 0;
  width: 37px;
  height: 42px;
  transition: all 0.3s;
}
.custom_nav-container .navbar-toggler span {
  display: block;
  width: 35px;
  height: 4px;
  background-color: #ffffff;
  margin: 7px 0;
  transition: all 0.3s;
  position: relative;
  border-radius: 5px;
  transition: all 0.3s;
}
.custom_nav-container .navbar-toggler span::before, .custom_nav-container .navbar-toggler span::after {
  content: "";
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: #ffffff;
  top: -10px;
  border-radius: 5px;
  transition: all 0.3s;
}
.custom_nav-container .navbar-toggler span::after {
  top: 10px;
}
.custom_nav-container .navbar-toggler[aria-expanded=true] {
  transform: rotate(360deg);
}
.custom_nav-container .navbar-toggler[aria-expanded=true] span {
  transform: rotate(45deg);
}
.custom_nav-container .navbar-toggler[aria-expanded=true] span::before, .custom_nav-container .navbar-toggler[aria-expanded=true] span::after {
  transform: rotate(90deg);
  top: 0;
}

/*end header section*/
/* slider section */
.slider_section {
  flex: 1;
  display: flex;
  align-items: center;
  position: relative;
  padding: 45px 0 145px 0;
}
.slider_section .row {
  align-items: center;
}
.slider_section #customCarousel1 {
  width: 100%;
  position: unset;
}
.slider_section #customCarousel1 {
  width: 100%;
  position: unset;
}
.slider_section .detail-box {
  color: #00204a;
}
.slider_section .detail-box h1 {
  font-size: 3rem;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 15px;
  color: #ffffff;
}
.slider_section .detail-box p {
  color: #fefefe;
  font-size: 14px;
}
.slider_section .detail-box .btn-box {
  display: flex;
  margin: 0 -5px;
  margin-top: 25px;
}
.slider_section .detail-box .btn-box a {
  margin: 5px;
  text-align: center;
  width: 165px;
}
.slider_section .detail-box .btn-box .btn1 {
  display: inline-block;
  padding: 10px 15px;
  background-color: #00bbf0;
  color: #ffffff;
  border-radius: 0;
  transition: all 0.3s;
  border: none;
}
.slider_section .detail-box .btn-box .btn1:hover {
  background-color: #007fa4;
}
.slider_section .detail-box .btn-box .btn1 a:hover {
  text-decoration: underline; /* Add underline on hover */
  color: #0077B5; /* Change the text color on hover */
}
.slider_section .detail-box .btn-box .btn2 {
  display: inline-block;
  padding: 10px 15px;
  background-color: #000000;
  color: #ffffff;
  border-radius: 0;
  transition: all 0.3s;
  border: none;
}
.slider_section .detail-box .btn-box .btn2:hover {
  background-color: black;
}
.slider_section .detail-box .btn-box .btn2 a:hover {
  text-decoration: underline; /* Add underline on hover */
  color: #0077B5; /* Change the text color on hover */
}
.slider_section .img-box {
  margin: 45px 0;
}
.slider_section .img-box img {
  width: 100%;
}
/* ... */

